tests/src/frontend/typechecking/invalid/pipe_2.sk
fun foo(Int): void {
  void
}

fun bar(): void {
  "" |> foo
}
